[package]
name = "achievements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
http = "0.2.8"
reqwest = "0.11.14"
rouille = "3.6.1"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = "2.6.2"

[[bin]]
name = "rust"
path = "main.rs"
